fix(cdc): stream with no_data snapshot mode and tolerate NULL column values
- DebeziumCdcConnector: use snapshot.mode=no_data instead of initial_only.
  initial_only stops the connector after the snapshot and never streams
  subsequent changes; no_data always streams live changes regardless of
  offset state.
- EventPayload: replace Map.copyOf with HashMap-based copy. Debezium rows
  carry NULL column values and Map.copyOf throws NPE on them, which aborted
  parsing of every CDC event whose row had a null column (single inserts
  happened to avoid nulls; bulk/update/delete events hit it routinely).