@@ -1,5 +1,7 @@
 package com.syncflow.core.cdc;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 public record EventPayload(
@@ -8,8 +10,13 @@ public record EventPayload(
         Map<String, Object> primaryKeys) {
 
     public EventPayload {
-        before = before == null ? null : Map.copyOf(before);
-        after = after == null ? null : Map.copyOf(after);
-        primaryKeys = Map.copyOf(primaryKeys == null ? Map.of() : primaryKeys);
+        // Debezium rows can contain NULL column values; Map.copyOf would throw on them.
+        before = copyOrNull(before);
+        after = copyOrNull(after);
+        primaryKeys = copyOrNull(primaryKeys) == null ? Map.of() : primaryKeys;
+    }
+
+    private static Map<String, Object> copyOrNull(Map<String, Object> source) {
+        return source == null ? null : Collections.unmodifiableMap(new HashMap<>(source));
     }
 }
